Player 1 attacks player 1 and reduces player 2's HP by 10

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,6 +1,6 @@
 <%=@player_1_name%> VS <%= @player_2_name %>
 <br />
-<%=@player_2_name%> HP = 100
+<%=@player_2_name%> HP = <%=@player_2_health%>/100
 
 <!-- <button type="button" onclick="alert('You have attacked <%=@player_2_name%>')">Attack!</button> -->
 
