--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,5 +1,5 @@
 You have attacked <%=@player_2_name%>
 
-<form action="/play"> <!-- should i use method="post" instead????-->
+<form action="/play"> 
   <input type="submit" value="Back!" />
 </form>
