--- a/views/play.erb
+++ b/views/play.erb
@@ -1,9 +1,6 @@
-<%=@player_1_name%> VS <%= @player_2_name %>
-<br />
+<%=@player_1_name%> VS <%= @player_2_name %> <br />
 <%=@player_2_name%> HP = <%=@player_2_health%>/100
 
-<!-- <button type="button" onclick="alert('You have attacked <%=@player_2_name%>')">Attack!</button> -->
-
-<form action="/attack_msg"> <!-- should i use method="post" instead????-->
+<form action="/attack_msg">
   <input type="submit" value="Attack!" />
 </form>
