--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,5 +1,5 @@
-You have attacked <%=@player_2_name%>
+You have attacked <%=@attacked_name%>
 
-<form action="/play"> 
+<form action="/play">
   <input type="submit" value="Back!" />
 </form>
